force-app/main/default/objects/OneCRM__Form_Submission__c/fields/OneCRM__Account__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The related account</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Form Submissions</relationshipLabel>
    <relationshipName>FormSubmissions</relationshipName>
    <type>Lookup</type>
</CustomField>