force-app/main/default/objects/OneCRM__Form_Submission__c/fields/OneCRM__Campaign__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The related Campaign</description>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Form Submissions</relationshipLabel>
    <relationshipName>FormSubmissions</relationshipName>
    <type>Lookup</type>
</CustomField>