force-app/main/default/objects/OneCRM__Form_Submission__c/fields/OneCRM__Contact__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The &quot;Account&quot; field, just pointing to the Contact object instead of Account</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Form Submissions</relationshipLabel>
    <relationshipName>Form_Submissions</relationshipName>
    <type>Lookup</type>
</CustomField>