force-app/main/default/objects/OneCRM__Form_Submission__c/fields/OneCRM__Date__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Date__c</fullName>
    <label>Date</label>
    <type>DateTime</type>
</CustomField>