force-app/main/default/objects/OneCRM__Form_Submission__c/fields/OneCRM__Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Sent</label>
    <type>Checkbox</type>
</CustomField>