force-app/main/default/objects/OneCRM__Form_Submission__c/fields/OneCRM__hyperlink__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__hyperlink__c</fullName>
    <formula>IF(ISBLANK(OneCRM__Link__c), &apos;&apos;, HYPERLINK(OneCRM__Link__c, &quot;Link to Submission&quot;, &quot;_self&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link to Submission</label>
    <type>Text</type>
</CustomField>