force-app/main/default/objects/OneCRM__Form_Submission__c/fields/OneCRM__Income__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Income__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Income</description>
    <label>Income</label>
    <referenceTo>OneCRM__Income__c</referenceTo>
    <relationshipLabel>Form Submissions</relationshipLabel>
    <relationshipName>FormSubmissions</relationshipName>
    <type>Lookup</type>
</CustomField>