force-app/main/default/objects/OneCRM__Form_Submission__c/fields/OneCRM__Lead__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A related lead.</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Form Submissions</relationshipLabel>
    <relationshipName>FormSubmissions</relationshipName>
    <type>Lookup</type>
</CustomField>