force-app/main/default/objects/OneCRM__Form_Submission__c/fields/OneCRM__Legacy_Id__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Legacy_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Legacy Id</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>