force-app/main/default/objects/OneCRM__Form_Submission__c/fields/OneCRM__Link__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Link__c</fullName>
    <label>Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>