force-app/main/default/objects/OneCRM__Form_Submission__c/fields/OneCRM__Page_Title__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Page_Title__c</fullName>
    <label>Page Title</label>
    <length>200</length>
    <type>Text</type>
</CustomField>