force-app/main/default/objects/OneCRM__Form_Submission__c/fields/OneCRM__Status__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Deleted</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Inserted</fullName>
            </value>
            <value>
                <fullName>Merged</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>