force-app/main/default/objects/OneCRM__Form_Submission__c/listViews/OneCRM__All_Form_Submissions.listView-meta.xml
<ListView>
    <fullName>OneCRM__All_Form_Submissions</fullName>
    <columns>NAME</columns>
    <columns>OneCRM__Contact__c</columns>
    <columns>OneCRM__Date__c</columns>
    <columns>OneCRM__hyperlink__c</columns>
    <columns>OneCRM__Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Submissions</label>
</ListView>