force-app/main/default/objects/OneCRM__Form_Submission__c/listViews/OneCRM__Pending_Form_Submissions.listView-meta.xml
<ListView>
    <fullName>OneCRM__Pending_Form_Submissions</fullName>
    <columns>NAME</columns>
    <columns>OneCRM__Date__c</columns>
    <columns>OneCRM__Campaign__c</columns>
    <columns>OneCRM__Contact__c</columns>
    <columns>OneCRM__hyperlink__c</columns>
    <columns>OneCRM__Status__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>OneCRM__Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <label>Pending Submissions</label>
</ListView>